    - cputable (in dpkg) modified to contain those information
    - dpkg-dev depends on dpkg (>= 1.15.4) to ensure that we have an updated
      cputable (and so that a versioned build-dependency on dpkg-dev is enough
      to use this new feature)
    Closes: #531307
  * Split overly long Binary: field values over multiple lines. This is
    allowed since policy 3.8.3. Closes: #494714

  [ Modestas Vainius ]
  * Provide a meaningful label for dpkg-gensymbols diff.

  [ Updated dpkg translations ]
  * Asturian (Marcos Alvarez Costales). Closes: #535327
  * French (Christian Perrier).
  * German (Sven Joachim).
  * Italian (Milo Casagrande). Closes: #536538
  * Russian (Yuri Kozlov). Closes: #542254
  * Slovak (Ivan Masár). Closes: #537742
  * Swedish (Peter Krefting).

  [ Updated dselect translations ]
  * Russian (Yuri Kozlov). Closes: #542254
  * Slovak (Ivan Masár). Closes: #537741

  [ Updated man page translations ]
  * French completed (Christian Perrier).
  * German (Helge Kreutzmann), proofreading by Jens Seidel.
  * Swedish (Peter Krefting).

  [ Updated scripts translations ]
  * French completed (Christian Perrier).
  * German (Helge Kreutzmann).
  * Russian (Yuri Kozlov). Closes: #542254
  * Swedish (Peter Krefting).

 -- Guillem Jover <guillem@debian.org>  Sat, 27 Jun 2009 19:25:30 +0200

dpkg (1.15.3.1) unstable; urgency=low

  [ Modestas Vainius ]
  * Fix wildcard support in symbol files. Closes: #536034

 -- Guillem Jover <guillem@debian.org>  Wed, 08 Jul 2009 11:26:36 +0200

dpkg (1.15.3) unstable; urgency=low

  [ Guillem Jover ]
  * Unset TAR_OPTIONS when extracting .deb archives.
  * Use default compressor values in dpkg-source from Dpkg::Source::Compressor.
  * Fix dpkg-scanpackages to properly detect spurious overrides.
  * Rewrite dpkg-name in perl.
  * Do not close already closed files in some error conditions in libdpkg.
  * Use the correct units (KiB) in dpkg-split when referring to partsize.