@@ -80,6 +80,9 @@ dpkg (1.15.4) UNRELEASED; urgency=low
     Closes: #531307
   * Split overly long Binary: field values over multiple lines. This is
     allowed since policy 3.8.3. Closes: #494714
+  * Improve performance of dpkg-shlibdeps by caching minimal version
+    associated to each library in Dpkg::Shlib::SymbolFile. Thanks to
+    Jiří Paleček <jpalecek@web.de> for the patch.
 
   [ Modestas Vainius ]
   * Provide a meaningful label for dpkg-gensymbols diff.
